--- a/BasicChatApp/basicchat/src/Components/Home/Home.module.css
+++ b/BasicChatApp/basicchat/src/Components/Home/Home.module.css
@@ -1,9 +1,12 @@
 .home {
-    border: 2px solid teal;
     width: 80%;
     margin: 60px auto;
     box-shadow: 0 0 10px;
     padding: 20px;
     display: flex;
     justify-content: space-around;
+}
+.home > div {
+    border: 1px solid grey;
+    padding: 30px;
 }
