--- a/Rounting/routing/src/Components/Navbar/Navbar.module.css
+++ b/Rounting/routing/src/Components/Navbar/Navbar.module.css
@@ -1,4 +1,19 @@
 .navbar {
   color: #fff;
   background-color: black;
+  font-size: 25px;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.navbar > div:nth-child(2) {
+  display: flex;
+  justify-content: space-between;
+}
+.navbar > div:nth-child(2) > a {
+  text-decoration: none;
+  color: #fff;
+  margin-right: 50px;
+  font-size: 20px;
 }
