--- a/prac/index.css
+++ b/prac/index.css
@@ -1,33 +1,51 @@
-.container {
-  height: 100vh;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.btn-login {
+  color: #fff;
+  background: #000;
+  padding: 10px 15px;
+  font-size: large;
+  cursor: pointer;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.5);
   width: 100vw;
-  background: teal;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.c{
-  height: 100px;
-  background: orange;
-  position: sticky;
-  top: 30px;
-  z-index: 10;
-
+  height: 100vh;
+  z-index: -1;
+  position: fixed;
+  top: 0;
+  /* opacity: 0; */
 }
 
-.container > div {
-  background: coral;
-  height: 400px;
-  width: 400px;
-
-  position: sticky;
-  top: 10px;
+.login-form {
+  width: 300px;
+  padding: 40px 30px;
+  background-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+}
+.login-form > span {
+  position: absolute;
+  top: 0px;
+  right: 10px;
+  font-size: 30px;
+  font-weight: 600;
+  cursor: pointer;
 }
 
-.container > div > div {
-  background: yellow;
-  height: 100px;
-  width: 100px;
-
-  /* z-index: 20; */
+.login-form input {
+  width: 100%;
+  height: 35px;
+  margin-bottom: 20px;
+}
+.login-form input[type="submit"] {
+  color: #fff;
+  background-color: #000;
 }
